samples/_failures_safe/1761316235_1b1477_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c035f80.c: In function ‘main’:
./samples/SAFE/__tmp_5c035f80.c:175:5: error: expected expression at end of input
  175 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_5c035f80.c:175:5: error: expected declaration or statement at end of input
